# stepanov_task

./: .env.example  .pre-commit-config.yml  Dockerfile  LICENSE  Makefile  README.md  consts.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci-pipeline.yml  code-quality-and-dbt-checks.yml
airflow/dags/: dbt_main_dag.py
core/airflow/dags/: dbt_dv_dag.py  dbt_main_dag.py
core/dbt_customer_project/: profiles.yml
core/dbt_customer_project/models/marts/: dim_state.sql
core/dbt_customer_project/models/raw_vault/hubs/: hub_order.sql
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/dbt_packages/dbt_utils/integration_tests/: README.md
dbt_project/dbt_packages/dbt_utils/integration_tests/models/sql/: test_deduplicate.sql  test_unpivot.sql  test_unpivot_bool.sql
dbt_project/models/raw_vault/hubs/: hub_customer.sql
dbt_project/models/raw_vault/links/: link_customer.sql
dbt_project/models/raw_vault/sats/: sat_customer_details.sql
dbt_project/models/sources/: sources.yml
dbt_project/models/staging/: stg_customers.sql  stg_orders.sql
utils/: snowflake_config.py  telegram.py
utils/design/: __init__.py  beauty.py  console.py  developer.py  message.py
utils/graphic/: builder.py
utils/music/: music.py
